# AI-for-Distributed-System-Design

./: .gitignore  README.md  pyproject.toml
src/: llm.py  local.env  main.py  prompts.py  simulation_utils.py  training.py  training_dashboard.py
src/analysis/: run_charts.py
src/markdown/: eudoxia_bauplan.md  policy_examples.md
