[project]
name = "ai-for-distributed-system-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eudoxia",
    "litellm>=1.77.5",
    "python-dotenv>=1.1.1",
    "wonderwords>=2.2.0",
]

[tool.uv.sources]
eudoxia = { git = "https://github.com/BauplanLabs/eudoxia", rev = "main" }
